--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
   padding: 0;
+  background-color: rgb(231, 219, 214);
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -11,4 +12,18 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.first-letter{
+  color: palevioletred;
+}
+.navbar .navbar-brand{
+  font-size: 30px !important;
+}
+
+.loading{
+  height: 85vh;
+  display: flex;
+  justify-content: center;
+  align-items: center
 }
